@startuml

title __MENUS's Class Diagram__\n

  namespace es.ull {
    namespace menus {
      class es.ull.menus.CovidMenu {
          - brazil : JMenuItem
          - compararPaises : JMenuItem
          - eeuu : JMenuItem
          - india : JMenuItem
          - mb : JMenuBar
          - mundo : JMenuItem
          - representar : JMenu
          - russia : JMenuItem
          - spain : JMenuItem
          - uk : JMenuItem
          + CovidMenu()
          + actionPerformed()
          - activarGrafico()
      }
    }
  }
  

  namespace es.ull {
    namespace menus {
      class es.ull.menus.TwitterMenu {
          - listarTendencias : JMenu
          - mb : JMenuBar
          - representar : JMenu
          - tendenciasTwitterEEUU : JMenuItem
          - tendenciasTwitterEspana : JMenuItem
          - tendenciasTwitterMexico : JMenuItem
          + TwitterMenu()
          + actionPerformed()
      }
    }
  }
  

  namespace es.ull {
    namespace menus {
      class es.ull.menus.WeatherMenu {
          - londres : JMenuItem
          - madrid : JMenuItem
          - mb : JMenuBar
          - paris : JMenuItem
          - representar : JMenu
          - tokio : JMenuItem
          - washington : JMenuItem
          + WeatherMenu()
          + actionPerformed()
          - activarGrafico()
      }
    }
  }
  

  es.ull.menus.CovidMenu .up.|> java.awt.event.ActionListener
  es.ull.menus.CovidMenu -up-|> javax.swing.JInternalFrame
  es.ull.menus.CovidMenu o-- es.ull.views.VistaCovid : vistaCovid
  es.ull.menus.TwitterMenu .up.|> java.awt.event.ActionListener
  es.ull.menus.TwitterMenu -up-|> javax.swing.JInternalFrame
  es.ull.menus.TwitterMenu o-- es.ull.views.VistaTwitter : vistaTwitter
  es.ull.menus.WeatherMenu .up.|> java.awt.event.ActionListener
  es.ull.menus.WeatherMenu -up-|> javax.swing.JInternalFrame
  es.ull.menus.WeatherMenu o-- es.ull.views.VistaWeather : vistaWeather


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
